--- a/config.example.json
+++ b/config.example.json
@@ -5,5 +5,7 @@
         "host": "127.0.0.1",
         "port": 20000
     },
-    "task": {}
+    "task": {
+        "stickersCollection": "Default Stickers"
+    }
 }
